syntax = "proto3";
package rollkit;

option go_package = "github.com/rollkit/rollkit/types/pb/rollkit";

// MinimalHeader defines the structure of a minimal Rollkit block header as defined in the ADR.
message MinimalHeader {
  // ParentHash is the hash of the previous rollup block header
  bytes parent_hash = 1;

  // Height represents the block height (aka block number) of a given header
  uint64 height = 2;

  // Timestamp is the block creation time
  uint64 timestamp = 3;

  // ChainID is the chain identifier
  string chain_id = 4;

  // DataCommitment is a pointer to block data on DA layer
  bytes data_commitment = 5;

  // StateRoot is a commitment representing the state linked to the header
  bytes state_root = 6;

  // ExtraData is an arbitrary field for additional metadata (e.g. sequencer info)
  bytes extra_data = 7;
}

// SignedMinimalHeader contains a MinimalHeader and its signature
message SignedMinimalHeader {
  MinimalHeader header = 1;
  bytes signature = 2;
} 